<resources>
    <string name="app_name">FilmesFamosos</string>
    <string name="baixando_filmes">Baixando informações dos filmes</string>
    <string name="falha_filmes">Falha ao obter filmes</string>
    <string name="sem_conexao">Sem Conexão</string>
    <string name="populares">Populares</string>
    <string name="mais_votadas">Mais votadas</string>
    <string name="titulo">Titulo:</string>
    <string name="titulo_original">Titulo Original:</string>
    <string name="filme_de_adultos">Filme de Adultos:</string>
    <string name="avalia_o_dos_usuarios">Avaliação:</string>
    <string name="data_de_lan_amento">Data de Lançamento:</string>
    <string name="descricao">Descrição:</string>
    <string name="action_title">Filmes Famosos</string>
    <string name="cd_reproducao_trailer">Reprodução do trailer</string>
    <string name="falha_filmes_trailers">Falha ao obter trailers dos filmes</string>
    <string name="baixando_informacoes">Baixando informações</string>
    <string name="trailers">Trailers:</string>
    <string name="comentarios">Comentarios:</string>
    <string name="falha_reviews">Falha ao obter reviews</string>
    <string name="lbl_favorito">Favorito</string>
    <string name="lbl_favoritos">Favoritos</string>
    <string name="lbl_nao_favoritos">Não tem favoritos</string>
    <string name="lbl_tente_novamente">Sem Conexão, tente novamente</string>
    <string name="error_inserir">Error ao inserir em</string>
    <string name="uri_desconhecida">Uri desconhecida:</string>
</resources>
