<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.DetailsActivity"
    android:background="@drawable/fondo">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:paddingStart="0dp"
            android:layout_marginTop="0dp"
            android:focusedByDefault="false"
            android:foregroundGravity="fill"
            android:id="@+id/imgBackdrop_Path"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:backgroundTint="@color/colorPrimaryDark"/>


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="10dp"
            android:focusable="true"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true"
            android:backgroundTint="@android:color/white"
            card_view:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/imgPoster_Path"
                android:layout_width="122dp"
                android:layout_height="180dp"
                android:layout_gravity="center_vertical"/>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        card_view:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:focusedByDefault="true"
                        android:id="@+id/tv_favorito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_favorito"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="italic"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/img_naofavorito"
                        android:layout_marginLeft="5dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="top"
                        android:onClick="filmeNaoFavorito"
                        android:src="@drawable/estrela_sem_prencher_48"
                        android:clickable="true"
                        android:visibility="gone"/>
                    <ImageView
                        android:id="@+id/img_simfavorito"
                        android:layout_marginLeft="5dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="top"
                        android:onClick="filmeFavorito"
                        android:src="@drawable/estrela_preenchida_48"
                        android:visibility="gone"
                        android:clickable="true"/>

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_qtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="italic"/>

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp" />

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_qoriginalTitle"
                        android:text="@string/titulo_original"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:textColor="@android:color/holo_red_light"/>

                    <TextView
                        android:id="@+id/tv_originalTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"/>

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_qadult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filme_de_adultos"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tv_adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp" />

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_qvoteAverage"
                            android:text="@string/avalia_o_dos_usuarios"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:textColor="@android:color/holo_red_light"/>

                        <TextView
                            android:id="@+id/tv_voteAverage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"/>

                    </LinearLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="60dp"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_qreleaseDate"
                            android:text="@string/data_de_lan_amento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="italic"
                            android:textColor="@android:color/holo_red_light"/>

                        <TextView
                            android:id="@+id/tv_releaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"/>

                    </LinearLayout>

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_qoverview"
                        android:text="@string/descricao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:textColor="@android:color/holo_red_light"/>

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ListView
                        android:id="@+id/lv_trailerVideo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                    </ListView>

                    <ProgressBar
                        android:id="@+id/progressBarVideo"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_aguardeVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/progressBar"
                        android:layout_centerHorizontal="true"/>

                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ListView
                        android:id="@+id/lv_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                    </ListView>

                    <ProgressBar
                        android:id="@+id/progressBarReviews"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_aguardeReviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/progressBar"
                        android:layout_centerHorizontal="true"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>










</LinearLayout>
